fix: remove unnecessary overflow

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -38,6 +38,5 @@ body {
     .form-cleared textarea,
     .form-cleared input+div svg /* we are adding an svg to style the checkbox which we need to hide as well in empty forms*/ {
         visibility: hidden !important;
-        overflow: hidden;
     }
 }
